Modified some part for simplicity and code readablity.